@@ -1,3 +1,10 @@
+2003-10-11  Gary Thomas  <gary@mlbassoc.com>
+
+	* src/tcdiag.cxx (cyg_test_exit): 
+	* cdl/infra.cdl: New option CYGSEM_INFRA_RESET_ON_TEST_EXIT which
+	[if defined] indicates that "cyg_test_exit()" should reset the 
+	platform instead of the default hang.
+
 2003-10-03  Nick Garnett  <nickg@balti.calivar.com>
 
 	* tests/cxxsupp.cxx: Added ifdef to disable this test on H8/300
